--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,83 +1,68 @@
-name: Deploy to ECR
+name: Build and Push Docker Images to ECR
 
 on:
-  repository_dispatch:
-    types: [on-demand]
-#  push:
-#    branches: [ "*" ]
-#    tags: [ "*" ]
-  pull_request:
-    branches: [ main ]
-      # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
-  build:
-    name: Build Image
-    #runs-on: self-hosted
+  build-and-push:
     runs-on: ubuntu-latest
-    # These permissions are needed to interact with GitHub's OIDC Token endpoint.
+
     permissions:
       id-token: write
       contents: read
+
     steps:
-    - name: Check disk space
-      run: df . -h
-    - name: Free disk space
-      run: |
-          sudo docker rmi $(docker image ls -aq) >/dev/null 2>&1 || true
-          sudo rm -rf \
-            /usr/share/dotnet /usr/local/lib/android /opt/ghc \
-            /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup \
-            /usr/lib/jvm || true
-          echo "some directories deleted"
-          sudo apt install aptitude -y >/dev/null 2>&1
-          sudo aptitude purge aria2 ansible azure-cli shellcheck rpm xorriso zsync \
-            esl-erlang firefox gfortran-8 gfortran-9 google-chrome-stable \
-            google-cloud-sdk imagemagick \
-            libmagickcore-dev libmagickwand-dev libmagic-dev ant ant-optional kubectl \
-            mercurial apt-transport-https mono-complete libmysqlclient \
-            unixodbc-dev yarn chrpath libssl-dev libxft-dev \
-            libfreetype6 libfreetype6-dev libfontconfig1 libfontconfig1-dev \
-            snmp pollinate libpq-dev postgresql-client powershell ruby-full \
-            sphinxsearch subversion mongodb-org azure-cli microsoft-edge-stable \
-            -y -f >/dev/null 2>&1
-          sudo aptitude purge google-cloud-sdk -f -y >/dev/null 2>&1
-          sudo aptitude purge microsoft-edge-stable -f -y >/dev/null 2>&1 || true
-          sudo apt purge microsoft-edge-stable -f -y >/dev/null 2>&1 || true
-          sudo aptitude purge '~n ^mysql' -f -y >/dev/null 2>&1
-          sudo aptitude purge '~n ^php' -f -y >/dev/null 2>&1
-          sudo aptitude purge '~n ^dotnet' -f -y >/dev/null 2>&1
-          sudo apt-get autoremove -y >/dev/null 2>&1
-          sudo apt-get autoclean -y >/dev/null 2>&1
-          echo "some packages purged"
-    - name: Check disk space
-      run: df . -h
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Needed to fetch full history for diff
 
-    - name: Check out code
-      uses: actions/checkout@v4
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::<AWS_ACCOUNT_ID>:role/<GITHUB_ACTIONS_ROLE>
+          aws-region: <AWS_REGION>
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-region: ${{ secrets.AWS_REGION }}
-        role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/github
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
-#    - name: Login to Docker Hub
-#      uses: docker/login-action@v1
-#      with:
-#        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-#        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Build, create ECR repo if needed, and push Docker images
+        run: |
+          AWS_REGION="<AWS_REGION>"
+          ACCOUNT_ID="<AWS_ACCOUNT_ID>"
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
+          # Fetch latest main branch for diff
+          git fetch origin main
 
-    - name: Build, tag, and push image to Amazon ECR
-      env:
-        REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        REPOSITORY: jhub-open-userimage
-        IMAGE_TAG: ${{ github.sha }}
-      run: |
-        docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          # Get changed files between main and current HEAD
+          changed_files=$(git diff --name-only origin/main HEAD)
+          echo "Changed files:"
+          echo "$changed_files"
+
+          for dir in */ ; do
+            dir=${dir%/}
+            # Check if any changed files in this directory
+            if echo "$changed_files" | grep -q "^$dir/"; then
+              echo "Detected changes in $dir - processing..."
+
+              IMAGE_NAME="$dir"
+              ECR_REPO="$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_NAME"
+
+              # Check if ECR repo exists, create if not
+              if ! aws ecr describe-repositories --repository-names "$IMAGE_NAME" > /dev/null 2>&1; then
+                echo "ECR repository $IMAGE_NAME does not exist. Creating..."
+                aws ecr create-repository --repository-name "$IMAGE_NAME" > /dev/null
+              else
+                echo "ECR repository $IMAGE_NAME already exists."
+              fi
+
+              # Build and push image
+              docker build -t "$ECR_REPO" "./$dir"
+              docker push "$ECR_REPO"
+            else
+              echo "No changes in $dir, skipping build."
+            fi
+          done
