--- a/r-notebook/Dockerfile
+++ b/r-notebook/Dockerfile
@@ -41,10 +41,9 @@ RUN R -e "install.packages(c( \
     R -e "install.packages('https://cran.r-project.org/src/contrib/Archive/lisp/lisp_0.1.tar.gz', repos=NULL, type='source')" && \
     R -e "install.packages('https://cran.r-project.org/src/contrib/Archive/translate/translate_0.1.2.tar.gz', repos=NULL, type='source')"
 
-# Python packages
-RUN pip install \
-    nbgitpuller \
-    otter-grader
+# Copy and run common install script
+COPY ../install-common.sh /tmp/install-common.sh
+RUN chmod +x /tmp/install-common.sh && /bin/bash /tmp/install-common.sh
 
 # Fix R locale issue
 RUN echo "LC_ALL=en_US.UTF-8" >> /opt/conda/lib/R/etc/Renviron
