--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,7 @@ jobs:
               fi
 
               # Build and push image
-              docker build -t "$ECR_REPO" "./$dir"
+              docker build -f "$dir/Dockerfile" -t "$ECR_REPO" .
               docker push "$ECR_REPO"
             else
               echo "No changes in $dir, skipping build."
