--- a/r-notebook/Dockerfile
+++ b/r-notebook/Dockerfile
@@ -1,6 +1,8 @@
 ARG BASE_CONTAINER=quay.io/jupyter/r-notebook:hub-5.3.0
 FROM $BASE_CONTAINER
 
+LABEL maintainer="Ryoko <ryoko.norden@ubc.ca>"
+
 USER root
 
 RUN apt-get update && \
