--- a/r-notebook/Dockerfile
+++ b/r-notebook/Dockerfile
@@ -46,7 +46,9 @@ RUN R -e "install.packages(c( \
 # Copy and run common install script
 COPY install-common.sh /tmp/install-common.sh
 #RUN chmod +x /tmp/install-common.sh && /bin/bash /tmp/install-common.sh
-RUN chmod +x /tmp/install-common.sh && ls -l /tmp/install-common.sh && head -n 20 /tmp/install-common.sh
+RUN chmod +x /tmp/install-common.sh 
+RUN ls -l /tmp/install-common.sh
+RUN head -n 20 /tmp/install-common.sh
 RUN /bin/bash -x /tmp/install-common.sh
 
 # Fix R locale issue
