Update scipy images

--- a/scipy-notebook/Dockerfile
+++ b/scipy-notebook/Dockerfile
@@ -1,2 +1,30 @@
 ARG BASE_CONTAINER=quay.io/jupyter/scipy-notebook:hub-5.3.0
 FROM $BASE_CONTAINER
+
+USER root
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    curl \
+    wget \
+    unzip \
+    tzdata && \
+    apt-get clean && \
+    apt-get autoremove -y
+
+USER ${NB_UID}
+
+# Copy and run common install script
+USER root
+COPY install-common.sh /tmp/install-common.sh
+RUN chmod +x /tmp/install-common.sh
+USER ${NB_UID}
+RUN /bin/bash -x /tmp/install-common.sh
+
+# Fix ownership in case root touched files
+USER root
+RUN chown -R jovyan:users /home/jovyan
+
+USER jovyan
+ENV HOME=/home/jovyan
+WORKDIR $HOME
