Update scipy libraries

--- a/scipy-notebook/Dockerfile
+++ b/scipy-notebook/Dockerfile
@@ -10,7 +10,8 @@ RUN apt-get update && \
     curl \
     wget \
     unzip \
-    tzdata && \
+    tzdata \
+    wkhtmltopdf && \
     apt-get clean && \
     apt-get autoremove -y
 
@@ -19,9 +20,26 @@ USER ${NB_UID}
 # Copy and run common install script
 USER root
 COPY install-common.sh /tmp/install-common.sh
-RUN chmod +x /tmp/install-common.sh
+RUN chown jovyan:users /tmp/install-common.sh && chmod +x /tmp/install-common.sh
 USER ${NB_UID}
 RUN /bin/bash -x /tmp/install-common.sh
+
+# conda
+RUN mamba install -y -c conda-forge \
+    gdal \
+    geos \
+    proj && \
+    mamba clean -afy
+
+# pip
+RUN pip install --no-cache-dir \
+    altair \
+    pdfkit \
+    PyPDF2 \
+    uncertainties \
+    "vegafusion[embed]" \
+    "vegafusion-jupyter[embed]" \
+    vl-convert-python
 
 # Fix ownership in case root touched files
 USER root
