--- a/tensorflow-notebook/Dockerfile
+++ b/tensorflow-notebook/Dockerfile
@@ -34,7 +34,13 @@ RUN pip install --no-cache-dir \
     torchvision \
     torchaudio \
     torch-inspect \
-    nbgrader
+    nbgrader \
+    ngshare_exchange
+
+# Add nbgrader global config for nbshare
+USER root
+COPY nbgrader_config.py /etc/jupyter/nbgrader_config.py
+RUN chmod 644 /etc/jupyter/nbgrader_config.py
 
 # Fix ownership in case root touched files
 USER root
