Add a comment to trigger the build

--- a/tensorflow-notebook/Dockerfile
+++ b/tensorflow-notebook/Dockerfile
@@ -11,6 +11,7 @@ RUN apt-get update && \
     wget \
     unzip \
     tzdata \
+    # temp add for installing nbgrader from source. should be removed when switch back to upstream
     nodejs \
     wkhtmltopdf && \
     apt-get clean && \
