Add 3 models only

--- a/scipy-notebook/Dockerfile
+++ b/scipy-notebook/Dockerfile
@@ -40,7 +40,10 @@ RUN pip install --no-cache-dir \
     "vegafusion[embed]" \
     "vegafusion-jupyter[embed]" \
     vl-convert-python \
-    jupyter-ai[all]
+    jupyter-ai \
+    openai \
+    anthropic \
+    google-generativeai
 
 # Fix ownership in case root touched files
 USER root
