Pulling the bugfix (#2399) tensorflow-notebook from upstream

--- a/tensorflow-notebook/Dockerfile
+++ b/tensorflow-notebook/Dockerfile
@@ -1,7 +1,7 @@
 ARG BASE_CONTAINER=quay.io/jupyter/tensorflow-notebook:hub-5.4.3
 FROM $BASE_CONTAINER
 
-LABEL maintainer="Ryoko <ryoko.norden@ubc.ca>" #
+LABEL maintainer="Ryoko <ryoko.norden@ubc.ca>" 
 
 USER root
 
